--- a/12-key-sequence-detection/index.html
+++ b/12-key-sequence-detection/index.html
@@ -10,10 +10,10 @@
     <script>
         const pressed = []
         const secretCode = 'wesbos'
-        window.addEventListener('keydown',(e)=>{
-            console.log(e.key)
+        window.addEventListener('keyup',(e)=>{
+            // console.log(e.key)
             pressed.push(e.key)
-            pressed.splice(secretCode.length-1,pressed.length-secretCode.length)
+            pressed.splice(-secretCode.length-1,pressed.length-secretCode.length)
             if(pressed.join("").includes(secretCode)){
                 console.log("ding ding")
                 cornify_add()
